# 1bit-systems

./: .gitignore  .gitmodules  ARCHITECTURE.md  AUDIT-2026-04-26.md  CHANGELOG-2026-04-26.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUTOVER.md  Cargo.toml  DEMO.md  LICENSE  README.md  SECURITY.md  SHERRY-FILES.txt  bonsai_tq2_gemv_orig-hip-amdgcn-amd-amdhsa-gfx1151.bc  bonsai_tq2_gemv_orig-hip-amdgcn-amd-amdhsa-gfx1151.hipi  bonsai_tq2_gemv_orig-hip-amdgcn-amd-amdhsa-gfx1151.out  bonsai_tq2_gemv_orig-hip-amdgcn-amd-amdhsa-gfx1151.s  bonsai_tq2_gemv_orig-host-x86_64-pc-linux-gnu.bc  bonsai_tq2_gemv_orig-host-x86_64-pc-linux-gnu.hipi  bonsai_tq2_gemv_orig-host-x86_64-pc-linux-gnu.s  bonsai_tq2_gemv_orig.hip-hip-amdgcn-amd-amdhsa.hipfb  flake.nix  install.sh  packages.toml  uninstall.sh
cpp/: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
cpp/agent/: ARCHITECTURE.md  CMakeLists.txt  CONSENSUS.md  README.md  RUNBOOK.md  SECURITY.md
cpp/agent/configs/: halo-coder.toml.example  halo-echo.toml.example  halo-helpdesk.toml.example
cpp/agent/scripts/: discord-shim.ts
cpp/agent/src/: adapter_discord.cpp  adapter_discord_shim.cpp  adapter_telegram.cpp  brain.cpp  config.cpp  discord_ws.cpp  error.cpp  factories_default.cpp  loop.cpp  main.cpp  memory.cpp
cpp/agent/tests/: adapter_discord_test.cpp  adapter_telegram_test.cpp  brain_test.cpp  config_test.cpp  loop_test.cpp  memory_test.cpp  test_main.cpp  tools_test.cpp
cpp/aie/: CMakeLists.txt
cpp/aie/src/: backend.cpp  bitnet_gemm_aie2p.cpp  dyloader.cpp  error.cpp  tiled_gemv.cpp
cpp/aie/tests/: backend_test.cpp  bitnet_gemm_aie2p_test.cpp  dispatch_smoke_test.cpp  dyloader_test.cpp  error_test.cpp  tiled_gemv_test.cpp
cpp/cli/: CMakeLists.txt
cpp/cli/src/: budget.cpp  burnin.cpp  doctor.cpp  http.cpp  install.cpp  install_model.cpp  install_tracker.cpp  main.cpp  manifest.cpp  oobe_error.cpp  package.cpp  paths.cpp  power.cpp  preflight.cpp  proc.cpp  push.cpp  registry.cpp  rollback.cpp  service.cpp  sha256.cpp  update_feed.cpp  version.cpp
cpp/cli/tests/: budget_test.cpp  burnin_test.cpp  install_test.cpp  install_tracker_test.cpp  main_test.cpp  manifest_test.cpp  oobe_error_test.cpp  package_test.cpp  power_test.cpp  preflight_test.cpp  push_test.cpp  registry_test.cpp  rollback_test.cpp  sha256_test.cpp  update_feed_test.cpp
cpp/cmake/: deps.cmake
cpp/core/: CMakeLists.txt
cpp/core/src/: error.cpp  gguf.cpp  h1b.cpp  htok.cpp  sampler.cpp
cpp/core/tests/: error_test.cpp  h1b_test.cpp  htok_test.cpp  sampler_test.cpp
cpp/echo/: CMakeLists.txt
cpp/echo/src/: codec.cpp  main.cpp  server.cpp  ws.cpp
cpp/echo/tests/: echo_test.cpp
cpp/halo-ralph/: CMakeLists.txt
cpp/halo-ralph/src/: main.cpp  ralph.cpp
cpp/halo-ralph/tests/: ralph_test.cpp
cpp/helm/: CMakeLists.txt
cpp/helm-tauri/: CMakeLists.txt  README.md  index.html  package.json  tsconfig.json  vite.config.ts
cpp/helm-tauri/src/: App.tsx  main.tsx  theme.css
cpp/helm-tauri/src-tauri/: Cargo.toml  tauri.conf.json
cpp/helm-tui/: CMakeLists.txt
cpp/helm-tui/src/: layout.cpp  main.cpp  pane.cpp  state.cpp  widgets.cpp
cpp/helm-tui/tests/: helm_tui_test.cpp
cpp/helm/src/: app_model.cpp  bearer.cpp  conv_log.cpp  conversation.cpp  lemonade_bundle.cpp  main.cpp  main_tray.cpp  main_window.cpp  models.cpp  session.cpp  stream.cpp  telemetry.cpp  tray.cpp
cpp/helm/tests/: helm_test.cpp
cpp/ingest/: CMakeLists.txt
cpp/ingest/src/: cbor.cpp  cbor.hpp  main.cpp  pack.cpp  prepare.cpp  residual.cpp  sha256.cpp  tar.cpp  tar.hpp  validate.cpp
cpp/ingest/tests/: cbor_test.cpp  pack_test.cpp  residual_test.cpp  sha256_test.cpp  validate_test.cpp
cpp/kokoro/: CMakeLists.txt
cpp/kokoro/src/: engine.cpp  error.cpp
cpp/kokoro/tests/: engine_test.cpp  error_test.cpp  validation_test.cpp
cpp/landing/: CMakeLists.txt
cpp/landing/assets/: index.html
cpp/landing/cmake/: embed_assets.cmake
cpp/landing/src/: main.cpp  router.cpp  server.cpp  status.cpp  telemetry.cpp
cpp/landing/tests/: landing_test.cpp
cpp/mcp/: CMakeLists.txt
cpp/mcp-clients/: CMakeLists.txt
cpp/mcp-clients/src/: github.cpp  http.cpp  protocol.cpp  semgrep.cpp  stdio_client.cpp
cpp/mcp-clients/tests/: github_test.cpp  http_test.cpp  (+3 more)
cpp/mcp-linuxgsm/: CMakeLists.txt
cpp/onnx/: CMakeLists.txt
cpp/power/: CMakeLists.txt
cpp/retrieval/: CMakeLists.txt
cpp/stream/: CMakeLists.txt
cpp/tier-mint/: CMakeLists.txt
cpp/voice/: CMakeLists.txt
cpp/watchdog/: CMakeLists.txt
crates/1bit-agents/: Cargo.toml
crates/1bit-agents-legacy/: Cargo.toml
crates/1bit-aie/: Cargo.toml  build.rs
crates/1bit-cli/: Cargo.toml
crates/1bit-core/: Cargo.toml
rocm-cpp/: .clangd  CMakeLists.txt  install.sh
rocm-cpp/aie/: README.md
rocm-cpp/bench/: peak_probe_bench.cpp
rocm-cpp/docs/: 01-environment.md  02-therock-build.md  03-compiler-flags.md  04-wave32-kernels.md  05-ternary-inference.md  10-gemm-v2-design.md  13-phase5-decode-integration.md  17-desktop-gui-spec.md  h1b-medusa-format.md
rocm-cpp/kernels/: ternary_gemv_devscale.hip  ternary_gemv_phase5_8row.hip  ternary_gemv_tq2_0.hip  ternary_gemv_v2.hip
rocm-cpp/results/: vulkan-burn-20260416-2109.md
rocm-cpp/router-cpp/: CMakeLists.txt  README.md
rocm-cpp/src/: engine.cpp  engine_npu_dispatch.cpp  engine_npu_dispatch.h  h1b_loader.cpp  hadamard_rotate.hip  kv_cache_attn.hip  kv_cache_attn_fd.hip  kv_cache_attn_fd_i8.hip  kv_cache_attn_fd_rotor.hip  kv_cache_attn_i8.hip  medusa_loader.cpp  medusa_small_m_gemv.hip  medusa_tree_attn.hip  prefill_standalone.hip  prim_kernels.hip  sherry_gemv.hip  ternary_gemm_smallm.hip  wmma_compat.hpp  wmma_peak_probe.hip
rocm-cpp/tests/: test_attn_degenerate.cpp  test_medusa_loader.cpp  test_medusa_skeleton.cpp  test_medusa_small_m_gemv.cpp  test_medusa_tree_attn.cpp  test_prim_and_attn.cpp  test_standalone.cpp  test_ternary_gemv_tq2_0.cpp
rocm-cpp/tools/: attn_fd_sweep.cpp  bench_sherry.cpp  bitnet_decode.cpp  h1b_repack_sherry.cpp  sherry_calib_capture.cpp  sherry_per_row_probe.cpp  test_gemm_v2.cpp  test_v2
(+1128 files in other folders)
