[workspace]
resolver = "2"
members = [
    "crates/halo-cli",
    "crates/halo-core",
    "crates/halo-router",
    "crates/halo-server",
    "crates/halo-agents",
    "crates/halo-mcp",
    "crates/halo-bitnet-hip",
    "crates/halo-bitnet-mlx",
    "crates/halo-lemonade",
    "crates/halo-gaia",
    "crates/halo-landing",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.86"
license      = "MIT"
repository   = "https://github.com/strix-ai-rs/halo-workspace"
authors      = ["strix-ai-rs contributors"]

[workspace.dependencies]
# Runtime primitives
tokio       = { version = "1.40", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP + APIs
axum        = { version = "0.7", features = ["macros", "json", "tokio"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tower       = "0.5"
tower-http  = { version = "0.6", features = ["trace", "cors"] }

# Async / streams
futures       = "0.3"
async-stream  = "0.3"
tokio-stream  = "0.1"

# Serialization / data
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bytes       = "1"
base64      = "0.22"

# CLI + config
clap        = { version = "4", features = ["derive", "env"] }
anyhow      = "1"
thiserror   = "2"
toml        = "0.8"

# System
dirs        = "5"
libc        = "0.2"
nix         = { version = "0.29", features = ["user", "process", "signal"] }
memmap2     = "0.9"
byteorder   = "1.5"

# Numerics / sampling
fastrand    = "2"
half        = "2"

# Crypto + IDs
ed25519-dalek = { version = "2", default-features = false, features = ["std", "fast"] }
sha2        = "0.10"
uuid        = { version = "1", features = ["v4", "serde"] }

# Shared across halo crates
halo-core        = { path = "crates/halo-core" }
halo-router      = { path = "crates/halo-router" }
halo-agents      = { path = "crates/halo-agents" }
halo-bitnet-hip  = { path = "crates/halo-bitnet-hip" }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = "symbols"

[profile.release.package."*"]
opt-level = 3
