[workspace]
resolver = "2"
members = [
    "crates/1bit-cli",
    "crates/1bit-core",
    "crates/1bit-router",
    "crates/1bit-server",
    "crates/1bit-agents",
    "crates/1bit-mcp",
    "crates/1bit-hip",
    "crates/1bit-cpu",
    "crates/1bit-mlx",
    "crates/1bit-onnx",
    "crates/1bit-lemonade",
    "crates/1bit-helm",
    "crates/1bit-pkg",
    "crates/1bit-landing",
    "crates/1bit-voice",
    "crates/1bit-echo",
    "crates/1bit-whisper",
    "crates/1bit-kokoro",
    "crates/1bit-power",
    "crates/1bit-stream",
    "crates/1bit-watchdog",
    "crates/1bit-mcp-clients",
    "crates/1bit-mcp-discord",
    "crates/1bit-mcp-linuxgsm",
    "crates/1bit-mcp-patreon",
    "crates/1bit-halo-ralph",
    "crates/1bit-retrieval",
    "crates/1bit-tier-mint",
    "crates/1bit-ingest",
    "tools/h1b-sherry",
    "tools/gguf-to-h1b",
    "tools/bitnet-to-tq2",
]
exclude = [
    "crates/1bit-agents-legacy",  # folded historical snapshot (halo-agents@ed7825b, 2026-04-21); not built
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.86"
license      = "MIT"
repository   = "https://github.com/bong-water-water-bong/1bit-systems"
authors      = ["1bit-systems contributors"]

[workspace.dependencies]
# Runtime primitives
tokio       = { version = "1.40", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# HTTP + APIs
axum        = { version = "0.7", features = ["macros", "json", "tokio"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tower       = "0.5"
tower-http  = { version = "0.6", features = ["trace", "cors"] }

# Async / streams
futures       = "0.3"
async-stream  = "0.3"
tokio-stream  = "0.1"

# Serialization / data
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
schemars    = { version = "1.0", features = ["preserve_order"] }
bytes       = "1"
base64      = "0.22"

# CLI + config
clap        = { version = "4", features = ["derive", "env"] }
anyhow      = "1"
thiserror   = "2"
toml        = "0.8"

# System
dirs        = "5"
libc        = "0.2"
nix         = { version = "0.29", features = ["user", "process", "signal"] }
memmap2     = "0.9"
byteorder   = "1.5"

# Numerics / sampling
fastrand    = "2"
half        = "2"

# Concurrent map (per-IP token buckets in 1bit-server rate limiter)
dashmap     = "5.5"

# Crypto + IDs
ed25519-dalek = { version = "2", default-features = false, features = ["std", "fast"] }
sha2        = "0.10"
uuid        = { version = "1", features = ["v4", "serde"] }

# Shared across halo crates
onebit-core        = { path = "crates/1bit-core" }
onebit-router      = { path = "crates/1bit-router" }
onebit-agents      = { path = "crates/1bit-agents" }
onebit-retrieval   = { path = "crates/1bit-retrieval" }
onebit-hip  = { path = "crates/1bit-hip" }
onebit-cpu  = { path = "crates/1bit-cpu" }
onebit-whisper = { path = "crates/1bit-whisper", default-features = false, features = ["stub"] }
onebit-kokoro = { path = "crates/1bit-kokoro", default-features = false, features = ["stub"] }

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = "symbols"

[profile.release.package."*"]
opt-level = 3
